# boxcluster-visualization-demo

./: Cargo.toml  simple-overlap-2.txt  test.txt
src/: dag.rs  dag_creator.rs  file_reader.rs  lib.rs  main.rs  pattern.rs
tests/: dag_test.rs  dag_tests.rs
tests/test_data/: 4k-big-patterns.txt  real1.txt  simple-msub-2.txt  simple-overlap.txt  triple-diff-overlap.txt
