[package]
name = "boxcluster-visualization-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boxcluster_visualization"
path = "src/main.rs"

[lib]
name = "boxcluster_visualization"
path = "src/lib.rs"

[dependencies]
itertools = "0.10.5"
debug_print = "1.0.0"
rand = "0.8.5"
indicatif = "0.17.2"